styled and completed result modal

--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,42 @@
   font-weight: normal;
   font-size: 16px;
 }
+
+.result-heading {
+  text-align: center;
+  font-weight: 400;
+}
+
+.result-wpm {
+  color: #4CAF50;
+  font-weight: 600;
+}
+
+.result-typingspeed {
+  text-align: center;
+  margin-top: 40px;
+}
+
+.result-accuracy {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.typing-speed-heading,
+.accuracy-heading {
+  font-size: 20px;
+  margin-bottom: 5px;
+}
+
+.typing-speed-content,
+.accuracy-content {
+  margin-top: 10px;
+  font-size: 24px;
+  font-weight: 400;
+}
+
+.unfocused-content {
+  font-size: 16px;
+  font-weight: 400;
+  color: rgb(167, 166, 166);
+}
