--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@
 
 .Character {
   white-space: pre;
+  font-size: 50px;
 }
 
 .Character-current {
@@ -79,4 +80,13 @@
 
 .red-timer {
   color: red;
+}
+
+.timer-block {
+  margin-top: -150px;
+  margin-bottom: 130px;
+}
+
+.parameters-div {
+  margin-top: 100px;
 }
